# STHN

./: .gitattributes  .gitignore  README.md
Artifacts/: README.md
Code/GeoTIFF/: .gitignore  README.md  Run.bat  Setting_Kaluts.json  main.py  pyproject.toml  requirements.txt  setting.json
Code/GeoTIFF/Scripts/: __init__.py  cli.py  config_wizard.py  defaults.py  geo.py  geotiff.py  hdf5_export.py  output_paths.py  patches.py  settings.py  sthn_export.py  tiles.py
Code/GeoTIFF/Settings/: Fast_US_GeoTIFF_Only.json  Iran_Lut_Kaluts_Model_Demo.json  README.md  US_Grand_Canyon_Model_Demo.json  US_New_York_Model_Demo.json  US_San_Francisco_Model_Demo.json
Code/STHN/: ALGORITHM_EXPLANATION.md  ALGORITHM_MEMORIZATION_GUIDE.md  COLAB_MISSING_DATA_SETUP.md  FULL_DATASET_DOWNLOAD_AND_SCALE_RUN.md  GOOGLE_50KM_PREVIEW_GUIDE.md  MISSING_DATA_EXAMPLES_PRESENTATION_NOTES.md  PROFESSOR_PROJECT_COLAB_SETUP.md  REPOSITORY_STRUCTURE.md  RETRIEVAL_PROTOTYPE_GUIDE.md  RETRIEVAL_TEST_BUNDLE_README.md  SCALE_OBSERVATION_2026-05-18_ANALYSIS.md  SCALE_OBSERVATION_COLAB_SETUP.md  SCALE_OBSERVATION_H5_GUIDE.md  STHN_H5_DATABASE_GUIDE.md  STHN_IMPLEMENTATION_ARCHITECTURE.md  STHN_PROGRESS_REPORT_2026-06-03.md
Docs/Notes/: Discussion_With_Professor.txt  My_Notes.txt  Professor_Note.txt
References/Paper_Extracts/: Second_Paper_Extract.txt
References/STHN_Summaries/: Paper_Summary.md  Repository_Documentation_Task.txt
Results/: README.md
Results/Retrieval/: AmirhoseinHashemiProjectReport2.md  CPU_RETRIEVAL_RUN_AND_IMPLEMENTATION_EXPLANATION_2026-06-22.md  README.md  (+1 more)
(+62 files in other folders)
